# NCL

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build_and_test.yml  cmake.yml  codeql-analysis.yml
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  Enum.h  Environment.cpp  Environment.h  Exception.h  Util.h  WCL.cpp  WCLConfig.h.in  Win32Exception.h  dirs  pch.h  project.mk
src/Collections/: CMakeLists.txt  IEnumerable.h
src/CommandLine/: CMakeLists.txt  Option.h  Parser.cpp  Parser.h
src/IO/: CMakeLists.txt  Directory.cpp  Directory.h  DirectoryInfo.cpp  DirectoryInfo.h  File.cpp  File.cpp.new  File.h  FileInfo.cpp  FileInfo.h  FileStream.cpp  FileStream.h  FileSystemInfo.cpp  FileSystemInfo.h  IOException.h  IOHelper.cpp  IOHelper.h  Path.cpp  Path.h  Stream.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h  TextReader.h  TextWriter.h  Util.h  pch.h  sources
src/IO/MemoryMappedFiles/: MemoryMappedFile.cpp  MemoryMappedFile.h  MemoryMappedViewAccessor.cpp  MemoryMappedViewAccessor.h
src/Text/: ASCIIEncoding.cpp  ASCIIEncoding.h  CMakeLists.txt  Encoding.cpp  Encoding.h  UTF8Encoding.cpp  UTF8Encoding.h  UnicodeEncoding.cpp  UnicodeEncoding.h
src/Threading/: CMakeLists.txt  Event.h  EventWaitHandle.cpp  EventWaitHandle.h  Threading.h  WaitHandle.cpp  WaitHandle.h  sources
src/Threading/Tasks/: Task.cpp  Task.h
src/pending/: Nullable.h  String.h  stringsup.h
src/pending/Base/: Delegate.h  Property.h  Types.h
src/pending/IO/: DataStreamReader.cpp  DataStreamReader.h
src/pending/Text/: ASCIIEncoding.cpp  ASCIIEncoding.h  Encoding.cpp  Encoding.h  UTF8Encoding.cpp  UTF8Encoding.h  UnicodeEncoding.cpp  UnicodeEncoding.h
src/pending/Threading/: AdviseHelper.h  Callback.h  CreateThreadFromLambda.h  Threading.Downlevel.h  Threading.Win8.h  Threading.h  Timer.Downlevel.h  Timer.Win8.h  Timer.h
src/pending/Util/: Delegate.h  DelegateFromWeb.h  Endian.h  FunctionTraits.h  LibraryModule.h
src/security/: CMakeLists.txt
src/security/Cryptography/: CMakeLists.txt  CryptographicException.h  HashAlgorithm.cpp  HashAlgorithm.h  MD5.cpp  MD5.h  SHA1.cpp  SHA1.h  SHA256.cpp  SHA256.h  SHA512.cpp  SHA512.h  Util.h
src/tests/: CMakeLists.txt
src/tests/IO/: CMakeLists.txt  MemoryMappedFileTests.cpp
src/tests/Security/: CMakeLists.txt  HashTests.cpp
src/tests/Threading/: CMakeLists.txt  TaskTests.cpp  WaitHandleTests.cpp
src/unittests/: CMakeLists.txt  dirs
src/unittests/Threading/: WaitHandleTests.cpp  sources
