add_library(wcl_io OBJECT 
	Directory.cpp 
	Directory.h 
	File.cpp 
	File.h 
	FileStream.cpp 
	FileStream.h
	IOException.h 
	IOHelper.cpp
	IOHelper.h
	Path.cpp 
	Path.h 
	Stream.h
	StreamReader.cpp
	StreamReader.h
	StreamWriter.cpp
	StreamWriter.h
	TextReader.h
	TextWriter.h
 )

# Add to lib dependencies:
# Pathcch.lib
